--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ services:
   web:
     build:
       dockerfile: Dockerfile.web
-    image: docker-test-web:latest
     depends_on:
       - postgres
       - redis
     ports:
       - 8080:8080
+    env_file:
+      - ./src/auction.env
   postgres:
     image: postgres:14.2-alpine
     healthcheck:
@@ -19,9 +20,8 @@ services:
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=4Ynh^p25&*
-      - APP_DB_USER=auctioner
-      - APP_DB_PASS=&@737%mpHB
-      - APP_DB_NAME=auction
+    env_file:
+      - ./src/auction.env
     volumes:
       - ./db/init:/docker-entrypoint-initdb.d/
       - ./db/persistent:/var/lib/postgresql/data
@@ -30,11 +30,13 @@ services:
   redis:
     image: redis:6-alpine
     healthcheck:
-      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
-      timeout: 3s
-      interval: 1s
-      retries: 5
-    command: redis-server --requirepass 2222
+      test: ["CMD", "redis-cli","ping"]
+      timeout: 5s
+      interval: 10s
+      retries: 10
+    env_file:
+      - ./src/auction.env
+    command: "redis-server --requirepass $${REDIS_PASS}"
     restart: always
     ports:
       - "6379:6379"
