--- a/.github/workflows/compose-tests.yml
+++ b/.github/workflows/compose-tests.yml
@@ -26,10 +26,10 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Load .env
-      - uses: aarcangeli/load-dotenv@v1.0.0
+        uses: aarcangeli/load-dotenv@v1.0.0
       
       - name: Docker Compose Action
-      - uses: isbang/compose-action@v1.1.0
+        uses: isbang/compose-action@v1.1.0
         with:
           compose-file: "./src/tests/docker-compose.yml"
           services: 
@@ -37,7 +37,7 @@ jobs:
             redis
         
       - name: Docker Compose Action
-      - uses: isbang/compose-action@v1.1.0
+        uses: isbang/compose-action@v1.1.0
         with:
           compose-file: "./src/tests/docker-compose.yml"
         
